apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:nightly
          resources:
            limits:
              gpu.intel.com/i915: "1"
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: media
              mountPath: "/media"
            - name: config
              mountPath: "/config"
      volumes:
        - name: media
          hostPath:
            path: /home/padawan/homelab/media-server/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
